# smblob-node-embedded-windows

./: .gitignore  CMakeLists.txt  README.md
cmake/modules/: CompileOptions.cmake
embedded-windows/: CMakeLists.txt
embedded-windows/consumer/: CMakeLists.txt
embedded-windows/consumer/include/: SMBlobNodeEmbeddedWindows.h
embedded-windows/consumer/src/: Consumer.cpp  ConsumerPrivate.cpp  ConsumerPrivate.h
embedded-windows/daemon/: BaseProcessor.cpp  BaseProcessor.h  BaseWindowActor.cpp  BaseWindowActor.h  CMakeLists.txt  ProcessorPrivate.cpp  ProcessorPrivate.h  types.h
embedded-windows/daemon/linux/: LinuxWindowActor.cpp  LinuxWindowActor.h
embedded-windows/daemon/qt/: application.cpp  application.h  embedded-window.cpp  embedded-window.h  main.cpp  mainwindow.cpp  mainwindow.h  mainwindow.ui
embedded-windows/example/: CMakeLists.txt  ProcessRunner.cpp  ProcessRunner.h  README.md  SMBlob_Node_Embedded_Windows_Console_Example.cpp  SMBlob_Node_Embedded_Windows_Console_Example.h  SMBlob_Node_Embedded_Windows_Console_Example_Unix.cpp  SMBlob_Node_Embedded_Windows_Console_Example_Win.cpp  SMBlob_Node_Embedded_Windows_Example.cpp  example.rc  example.xpm  resource.xrc
embedded-windows/example_qt/: CMakeLists.txt  mainwindow.cpp  mainwindow.h
embedded-windows/include/: SMBlobNodeEmbeddedWindows.h
embedded-windows/logic/: CMakeLists.txt
embedded-windows/logic/src/qt/: SMBlobAppPrivate_Qt.cpp  SMBlobNodeEmbeddedWindows_Qt.cpp
embedded-windows/logic/src/wxWidgets/: SMBlobAppPrivate_wxWidgets.cpp  SMBlobNodeEmbeddedWindows_wxWidgets.cpp
embedded-windows/models-shared/: CMakeLists.txt  README.md  embedded-windows.scheme.proto
embedded-windows/models-shared/include/: SMBlobNodeEmbeddedWindowsSharedModels.h
embedded-windows/models-shared/src/models/: embedded-windows.scheme.pb.cc  embedded-windows.scheme.pb.h
embedded-windows/shared/: CMakeLists.txt  embedded-windows.scheme.proto
embedded-windows/shared/include/: ProcessRunner.h  SMBlobNodeEmbeddedWindowsShared.h  base64.h
embedded-windows/shared/include/internal/: SMBlobNodeEmbeddedWindowsSharedInternal.h  SMBlobNodeEmbeddedWindowsSharedLog.h  SMBlobNodeEmbeddedWindowsSharedPbModels.h
embedded-windows/shared/src/: ProcessRunner.cpp  base64.cpp
embedded-windows/shared/src/models/: embedded-windows.scheme.pb.cc  embedded-windows.scheme.pb.h
embedded-windows/src/qt/: SMBlobAppPrivate.cpp  SMBlobAppPrivate.h  SMBlobAppPrivate_Qt.h  SMBlobNodeEmbeddedWindows_Qt.cpp
embedded-windows/src/wxWidgets/: SMBlobAppPrivate_wxWidgets.h  SMBlobNodeEmbeddedWindows_wxWidgets.cpp
embedded-windows/windows-actor/: CMakeLists.txt
embedded-windows/windows-actor/include/: BaseWindowActor.h
embedded-windows/windows-actor/include/linux/: XcbAtom.h  XcbInitializer.h
embedded-windows/windows-actor/linux/: LinuxWindowActor.cpp  LinuxWindowActor.h  XcbAtom.cpp  XcbInitializer.cpp
embedded-windows/windows-actor/src/: BaseWindowActor.cpp
info/: BUILD-QT.md
thirdparties/: .gitignore  CMakeLists.txt  README.md  build-libuv.sh  build-protobuf.sh
thirdparties/xdotool-wrapper/: CMakeLists.txt
thirdparties/xdotool-wrapper/src/: xdo.c  xdo.h
tools/: generate-version.py
version/: CMakeLists.txt
version/include/: LibraryVersion.h
version/src/: LibraryVersion.cpp
