if (WIN32)
elseif (LINUX)
    set(XDOTOOL_MAJOR 3)
    set(XDOTOOL_MINOR 20211022)
    set(XDOTOOL_PATCH 1)

    set(XDOTOOL_VERSION ${XDOTOOL_MAJOR}.${XDOTOOL_MINOR}.${XDOTOOL_PATCH} CACHE STRING "Build with xdotool")
    set(XDOTOOL_URL https://github.com/jordansissel/xdotool/releases/download/v${XDOTOOL_VERSION}/xdotool-${XDOTOOL_VERSION}.tar.gz)
    if (NOT EXISTS ${CMAKE_CURRENT_SOURCE_DIR}/xdotool-src)
        message(STATUS "Downloading xdotool sources: ${XDOTOOL_URL}")
        execute_process(COMMAND wget ${XDOTOOL_URL} -O ${CMAKE_CURRENT_SOURCE_DIR}/xdotool-src-${XDOTOOL_VERSION}.tar.gz)
        execute_process(COMMAND tar -xzf ${CMAKE_CURRENT_SOURCE_DIR}/xdotool-src-${XDOTOOL_VERSION}.tar.gz -C ${CMAKE_CURRENT_SOURCE_DIR} --one-top-level=xdotool-src --strip-components 1)
    endif()
    message(STATUS "Build with xdotool: ${XDOTOOL_VERSION}")
    set(XDOTOOL_SRC_FILES xdo.c xdo.h xdo_util.h xdo_version.h)
    set(B 2 3)
    set(C "4 5")
    set(D 6;7 8)
    set(E "")
    foreach(X IN LISTS XDOTOOL_SRC_FILES)
        file(COPY ${CMAKE_CURRENT_SOURCE_DIR}/xdotool-src/${X} DESTINATION ${CMAKE_CURRENT_SOURCE_DIR}/xdotool-wrapper/src)
    endforeach()
    add_subdirectory(xdotool-wrapper)

elseif (APPLE)
endif()